# devhub_tuningforge

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
app/: __init__.py  main.py  state.py  theme.py  ui.py
core/: __init__.py  admin.py  alerting.py  app_config.py  app_logger.py  app_settings.py  auto_analysis.py  catalog.py  configuration.py  dashboard.py  diagnostics.py  dry_run.py  executor.py  guardforge.py  maintenance.py  models.py  modules.py  offline_cache.py  planner.py  profile_io.py  profiles.py  recovery.py  reporting.py  risk_engine.py  safety.py  system_info.py  tuning.py
profiles/: ai-codex.json  clean.json  developer.json  extem.json
scripts/: build_portable.cmd  build_portable.ps1
tests/: test_admin.py  test_alerting.py  test_app_config_modules_safety.py  test_app_logger.py  test_app_settings.py  test_auto_analysis.py  test_catalog_profiles.py  test_configuration.py  test_dashboard.py  test_dry_run.py  test_error_doctor.py  test_executor.py  test_guardforge.py  test_maintenance.py  test_offline_cache.py  test_planner_reporting.py  test_profile_io.py  test_recovery.py  test_risk_engine.py  test_system_info.py  test_theme.py  test_tuning.py  test_ui_regression.py
tuning/: actions.json
